@@ -50,7 +50,9 @@ CString SecondsToTime( float fSecs )
 	int iMinsDisplay = (int)fSecs/60;
 	int iSecsDisplay = (int)fSecs - iMinsDisplay*60;
 	float fLeftoverDisplay = (fSecs - iMinsDisplay*60 - iSecsDisplay) * 100;
-	return ssprintf( "%02d:%02d:%02.0f", iMinsDisplay, iSecsDisplay, fLeftoverDisplay );
+	CString sReturn = ssprintf( "%02d:%02d:%02.0f", iMinsDisplay, iSecsDisplay, min(99.0f,fLeftoverDisplay) );
+	ASSERT( sReturn.GetLength() <= 8 );
+	return sReturn;
 }
 
 //-----------------------------------------------------------------------------
